--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "html-loader": "^1.3.2",
     "html-webpack-plugin": "^5.0.0",
     "matter-js": "^0.16.1",
-    "pixi": "^0.3.1",
-    "pixi.js": "^5.3.7",
+    "pixi-particles": "^4.3.0",
+    "pixi.js": "^5.3.3",
+    "poly-decomp": "^0.3.0",
     "style-loader": "^2.0.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.20.0",
